--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,47 +9,19 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/etDescription"
+    <FrameLayout
+        android:id="@+id/flContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/bottom_navigation"
+        android:layout_marginTop="5dp" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/description"
-        android:inputType="textPersonName"
-        android:textColorHint="@color/black" />
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="5dp"
+        app:menu="@menu/menu_bottom_navigation" />
 
-    <Button
-        android:id="@+id/btTakePicture"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/takePicture"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:textColorLink="#FFFFFF"
-        app:backgroundTint="@color/black" />
-
-    <ImageView
-        android:id="@+id/ivImage"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        tools:srcCompat="@tools:sample/avatars" />
-
-    <Button
-        android:id="@+id/btSubmit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/submit"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        app:backgroundTint="@color/black" />
-
-    <Button
-        android:id="@+id/btLogout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:backgroundTint="#FB3838"
-        android:hint="@string/logout"
-        android:textColor="@color/white"
-        android:textColorHint="#FAF6F6" />
-</LinearLayout>
+</RelativeLayout>
