--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,8 @@
         <item name="android:textSize">20dp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:fontFamily">monospace</item>
-        <item name="android:background">@color/white</item>
+        <item name="android:background">@color/black</item>
+        <item name="android:backgroundTint">@color/black</item>
+        <item name="android:icon">@drawable/nav_logo_whiteout</item>
     </style>
-
 </resources>
